<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.AboutActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarabout"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:contentDescription="@string/logo_github"
        android:scaleType="centerInside"
        android:src="@drawable/github_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.120000005" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:text="@string/slogan"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/info"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/darker_gray"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <LinearLayout
            style="@style/LayoutInfo"
            android:layout_height="match_parent"
            android:layout_margin="0.5dp"
            android:background="@android:color/white">

            <TextView
                style="@style/TextStyleHeader"
                android:layout_marginTop="8dp"
                android:text="@string/october_2007" />

            <TextView
                style="@style/DetailUserText"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/first_commit"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            style="@style/LayoutInfo"
            android:layout_height="match_parent"
            android:layout_margin="0.5dp"
            android:background="@android:color/white">

            <TextView
                style="@style/TextStyleHeader"
                android:layout_marginTop="8dp"
                android:text="@string/san_francisco" />

            <TextView
                style="@style/DetailUserText"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/headquarters"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            style="@style/LayoutInfo"
            android:layout_height="match_parent"
            android:layout_margin="0.5dp"
            android:background="@android:color/white">

            <TextView
                style="@style/TextStyleHeader"
                android:layout_marginTop="8dp"
                android:text="@string/_100_million" />

            <TextView
                style="@style/DetailUserText"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/repositories_hosted"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/info2"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <TextView
        android:id="@+id/learn_more"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autoLink="all"
        android:linksClickable="true"
        android:text="@string/learn_more"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_primary"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

</androidx.constraintlayout.widget.ConstraintLayout>